# sagery

./: .env-template  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  _pytest.ini  alembic.ini  docker-compose.yaml  models.py  mypy.ini  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 07040cc27090_add_statuses_to_job_and_request.py  20240618204208-6b751fd3bf3d_init_migration.py  20240927083733-1a3573791d7b_.py  20240927084348-1a8507b8f24d_.py  20241007155128-5bd4101c88f4_.py  20241008115422-66bbf5ace42e_.py  20241008135436-4ecb64304fa4_.py  20241008201117-0f3020c9d139_.py  20241008204135-76c93c460419_.py  20241015105042-9ebb4fe9c830_.py  20241015105547-b6e2d9b29eac_.py  20241016204301-ebe6a14c918c_.py  20241017073137-f7859b94748d_.py  20241017073430-93145e3f94fb_.py  20241017074653-61fe3c47683d_.py  20241017080225-dbb8fef2593a_.py  2024_06_18_1510-038084e83bec_.py  25bc47ac1ffc_init_migration.py  30179bf131ec_init_migration.py  71f986d379b3_add_joboperatordata.py  af9f63ace287_init_migration.py  c26de07862c0_add_request_external_id.py  cc5bfdd0f814_added_saga_table.py  d915837537a6_init_migration.py
sagery/: abstract.py  api.py  daemon.py  db.py  domain.py  enums.py  functions.py  jobs.py  main.py  models.py  operators.py  registry.py  repositories.py  sagas.py  schema.py  settings.py  status.py  types.py
sagery/api/: main.py  v1.py
tests/: conftest.py  test_api.py  test_core.py  test_daemon.py  test_main.py  test_registry.py  test_repository.py
tests/api/: test_main.py  test_v1.py
tests/data/: jobs.json  operators.json  sagas.json
tests/example/: operators.py  sagas.py
